Transifex issue #9 --> beginning dedicated gh-pages for testing

--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -40,9 +40,13 @@
     <link href="{{ site.JB.BASE_PATH }}/{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ site.JB.BASE_PATH }}/{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
+    <!-- transifex translation -->
+    <script type="text/javascript">window.liveSettings={api_key:"9107a503fa29445796694c37873d1b99"}</script>
+    <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
+
   </head>
 
-  <body>
+  <body class="txlive">
     <div id="wrap">
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
