--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -30,9 +30,13 @@
     <link href="{{ site.JB.BASE_PATH }}/{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ site.JB.BASE_PATH }}/{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
+    <!-- transifex translation -->
+    <script type="text/javascript">window.liveSettings={api_key:"9107a503fa29445796694c37873d1b99"}</script>
+    <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
+
   </head>
 
-  <body>
+  <body class="txlive">
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
