--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,13 @@
     <![endif]-->  
     <link href="{{ site.JB.BASE_PATH }}/{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ site.JB.BASE_PATH }}/{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+
+    <!-- transifex translation -->
+    <script type="text/javascript">window.liveSettings={api_key:"9107a503fa29445796694c37873d1b99"}</script>
+    <script type="text/javascript" src="//cdn.transifex.com/live.js"></script>
+
 </head>
-<body data-spy="scroll" data-target=".navbar-scroll">
+<body data-spy="scroll" data-target=".navbar-scroll" class="txlive">
   {{ content }}
 	<script type="text/javascript" src="{{ site.JB.BASE_PATH }}/js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="{{ site.JB.BASE_PATH }}/js/jquery.flexslider.js"></script>
